--- a/src/styles/_aboutmovie.scss
+++ b/src/styles/_aboutmovie.scss
@@ -1,5 +1,9 @@
 @use 'variaveis';
 
+.about-movie__mobile {
+    display: none;
+}
+
 .about-movie {
     background-image: url(../images/joker-section-sobre-filme.png);
     height: 100vh;
@@ -7,7 +11,49 @@
     background-size: cover;
     display: flex;
     justify-content: center;
-    
+
+
+    .modal-about-movie {
+        width: 100%;
+        height: 100%;
+        justify-self: center;
+        background-color: black;
+        opacity: 0.8;
+
+        button {
+            margin-top: 10px;
+            margin-bottom: 10px;
+
+            background-color: transparent;
+            color: #fff;
+            border: none;
+            outline: none;
+
+            span {
+                font-size: 38px;
+                cursor: pointer;
+            }
+        }
+
+        .about-movie__content__about__modal {
+            width: 100%;
+
+            align-items: center;
+            padding: 20px;
+            border: 1px solid variaveis.$corDoTextoSecundario;
+
+
+
+            h2 {
+                font-size: 30px;
+            }
+
+            p {
+                font-size: 18px;
+            }
+        }
+    }
+
 
     &__content {
         display: grid;
@@ -26,40 +72,183 @@
             border: 1px solid variaveis.$corDoTextoSecundario;
             max-height: calc(100vh - 250px);
             overflow: hidden;
-            
-            
+
+
 
             h2 {
                 padding: 30px 60px 0px;
             }
-            
+
             &__text {
                 padding: 10px 60px;
                 padding-bottom: 50px;
+
                 p {
                     font-weight: 400;
-                    
+
                 }
+
             }
 
             &__dc {
                 position: absolute;
                 bottom: 45px;
-                
+
                 img {
-                    
+
                     width: 62px;
                 }
-    
-                
+
+
             }
 
         }
 
-       
+
 
     }
 
-   
+
+}
+
+@media (max-width: 1490px) {
+    .about-movie{
+        background-image: url(../images/joker-image-test.png);
+        
+    }
+}
+
+
+
+
+
+
+@media (max-width: 1040px) {
+    .about-movie {
+        display: none;
+
+    }
+
+
+    .about-movie__mobile {
+        background-image: url(../images/joker-about-movie-mobile.png);
+        height: 100vh;
+        width: 100%;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+
+        .modal-about-movie--mobile {
+            width: 100%;
+            height: 100%;
+            justify-self: center;
+            background-color: black;
+            opacity: 1;
+
+            justify-content: center;
+
+            button {
+                margin-top: 10px;
+                margin-bottom: 10px;
+
+                background-color: transparent;
+                color: #fff;
+                border: none;
+                outline: none;
+
+                span {
+                    font-size: 38px;
+                }
+            }
+
+            .about-movie__mobile__content__about__modal {
+                width: 100%;
+
+                align-items: center;
+                padding: 20px;
+                border: 1px solid variaveis.$corDoTextoSecundario;
+
+
+
+                h2 {
+                    font-size: 30px;
+                }
+
+                p {
+                    font-size: 18px;
+                }
+            }
+        }
+
+
+        &__content {
+
+            display: flex;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+            padding-left: 50px;
+            padding-right: 50px;
+            position: relative;
+
+            &__about {
+                width: 100%;
+                margin-top: 30px;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                padding: 20px;
+                border: 1px solid variaveis.$corDoTextoSecundario;
+
+
+
+                h2 {
+                    font-size: 30px;
+                    margin-bottom: 12px;
+                    width: 100%;
+                }
+
+                p {
+                    font-size: 15px;
+                }
+
+                &__btn {
+                    position: absolute;
+
+                    bottom: 50px;
+                    border-radius: 13px;
+                    padding: 15px 50px;
+                    cursor: pointer;
+                    border: 1px solid variaveis.$corDoTextoSecundario;
+                }
+
+
+            }
+
+
+
+
+
+
+
+
+
+
+        }
+
+
+    }
+}
+
+@media (max-width: 370px) {
+    .about-movie__mobile__content__about {
+        h2 {
+            font-size: 24px
+        }
+
+        p {
+            font-size: 14px;
+        }
+    }
 }
 
