--- a/src/styles/_joaquin.scss
+++ b/src/styles/_joaquin.scss
@@ -1,62 +1,63 @@
 @use 'variaveis';
 
-
-.about-movie-deniro__mobile {
+.about-movie-joaquin__mobile {
     display: none;
 }
 
-.about-movie-deniro {
-    background-image: url(../images/robert-de-niro.png);
+.about-movie-joaquin {
+    background-image: url(../images/Design\ sem\ nome\ \(18\).png);
     height: 100vh;
     width: 100%;
     background-size: cover;
     display: flex;
     justify-content: center;
+    
 
-    .modal-about-movie {
+        .modal-about-movie {
             
-        width: 100%;
-        height: 100%;
-        justify-self: center;
-        align-items: center;
-        background-color: black;
-        opacity: 0.9;
-        
-
-        button {
-            margin-top: 10px;
-            margin-bottom: 10px;
-
-            background-color: transparent;
-            color: #fff;
-            border: none;
-            outline: none;
-
-            span {
-                font-size: 38px;
-                cursor: pointer;
-            }
-        }
-
-        .about-movie__content__about__modal {
             width: 100%;
-            
-            
+            height: 100%;
+            justify-self: center;
             align-items: center;
-            padding: 40px;
-            border: 1px solid variaveis.$corDoTextoSecundario;
-
-
-
-            h2 {
-                font-size: 30px;
+            background-color: black;
+            opacity: 0.9;
+            
+    
+            button {
+                margin-top: 10px;
+                margin-bottom: 10px;
+    
+                background-color: transparent;
+                color: #fff;
+                border: none;
+                outline: none;
+    
+                span {
+                    font-size: 38px;
+                    cursor: pointer;
+                }
             }
-
-            p {
-                font-size: 18px;
+    
+            .about-movie__content__about__modal {
+                width: 100%;
+                
+                align-items: center;
+                padding: 20px;
+                border: 1px solid variaveis.$corDoTextoSecundario;
+    
+    
+    
+                h2 {
+                    font-size: 30px;
+                }
+    
+                p {
+                    font-size: 18px;
+                }
             }
         }
-    }
+    
+
 
     &__content {
         display: grid;
@@ -76,6 +77,7 @@
             max-height: calc(100vh - 250px);
             overflow: hidden;
             
+            
 
             h2 {
                 padding: 30px 60px 0px;
@@ -93,7 +95,7 @@
 
 
         }
-        .logo-dc__deniro {
+        .logo-dc__joaquin {
             position: absolute;
             left: 0;
             bottom: 45px;
@@ -114,24 +116,26 @@
    
 }
 
+
+
+
+
 @media (max-width: 1040px) {
-    .about-movie-deniro{
+    .about-movie-joaquin{
             display: none;
         
     }
 
 
-    .about-movie-deniro__mobile {
-        background-image: url(../images/robertdeniro-mobile.png);
+    .about-movie-joaquin__mobile {
+        background-image: url(/src/images/joaquin-mobile.png);
         height: 100vh;
         width: 100%;
         background-size: cover;
         display: flex; 
         justify-content: center;
-        
 
         .modal-about-movie--mobile {
-            
             width: 100%;
             height: 100%;
             justify-self: center;
@@ -151,15 +155,10 @@
 
                 span {
                     font-size: 38px;
-                    
-                    width: 100%;
-                    display: flex;
-                    
                 }
             }
 
             .about-movie__mobile__content__about__modal {
-                
                 width: 100%;
 
                 align-items: center;
@@ -224,4 +223,17 @@
     
        
     }
+}
+
+@media (max-width: 370px) {
+    .about-movie-joaquin__mobile__content__about {
+        p {
+            font-size: 14px;
+        }
+    }
+}
+
+.teste-none {
+    opacity: 0;
+    
 }
