adicionando arrows funcionais

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,6 +50,7 @@ body {
     width: 100%;
     bottom: 35px;
     justify-content: center;
+    text-decoration: none;
 
     .arrow_down {
         font-size: 75px;
